--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="logger_n">Logger:\n</string>
     <string name="mainstr">This is the start screen\n This makes sure bluetooth is on and we have permissions.</string>
     <string name="check_permissions">Check Permissions</string>
-    <string name="startDiscover">Start Discovering</string>
-    <string name="stopDiscover">Stop Discovering</string>
+    <string name="startDiscover">Add a Transmitter</string>
+    <string name="stopDiscover">Searching…</string>
     <string name="startDiscovering">Start Discovering</string>
 
 </resources>
